--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -11,10 +11,6 @@
                 <td><%= @movie.title %></td>
               </tr>
               <tr>
-                <td><strong>Description:</strong></td>
-                <td><%= @movie.description %></td>
-              </tr>
-              <tr>
                 <td><strong>Movie length:</strong></td>
                 <td><%= @movie.movie_length %></td>
               </tr>
@@ -28,7 +24,23 @@
               </tr>
             </tbody>
           </table>
+          <%= link_to "Write a review", new_movie_review_path(@movie) %>
         </div>
+      </div>
+      <div class="col-lg-7 col-md-7 col-lg-offset-1 col-md-offset-1">
+        <h1 class="review_title"><%= @movie.title %></h1>
+        <p><%= @movie.description %></p>
+        <% if @reviews.blank? %>
+          <h3>No reviews just yet, would you like to add the first?</h3>
+          <%= link_to "Write a review", new_movie_review_path(@movie), class: "btn btn-danger" %>
+        <% else %>
+          <% @reviews.each do |review| %>
+            <div class="reviews">
+              <div class="star-rating" data-score="<%= review.rating %>"></div>
+              <p><%= review.comment %></p>
+            </div>
+          <% end %>
+        <% end %>
       </div>
     </div>
   </div>
@@ -36,3 +48,13 @@
 
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', root_path %>
+
+<script type="text/javascript">
+  $(".star-rating").raty({
+    path: "/assets/",
+    readOnly: true,
+    score: function() {
+      return $(this).attr("data-score")
+    }
+  });
+</script>
