Add searchkick gem and implement search

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -52,11 +52,11 @@
 <%= link_to 'Back', root_path %>
 
 <script type="text/javascript">
-  $(".star-rating").raty({
-    path: "/assets/",
+  $('.star-rating').raty({
+    path: '/assets/',
     readOnly: true,
     score: function() {
-      return $(this).attr("data-score")
+      return $(this).attr('data-score');
     }
   });
 </script>
