--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Movie</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @movie %> |
-<%= link_to 'Back', movies_path %>
+<div class="row">
+  <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3">
+    <div class="panel panel-inverse">
+      <div class="panel-heading">
+        <h1>Editing Movie</h1>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+        <%= link_to 'Cancel', movie_path, class: "btn btn-default pull-right" %>
+      </div>
+    </div>
+  </div>
+</div>
