--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -26,7 +26,7 @@
               </tr>
             </tbody>
           </table>
-          <%= link_to "Write a review", new_movie_review_path(@movie) %>
+
         </div>
       </div>
       <div class="col-lg-7 col-md-7 col-lg-offset-1 col-md-offset-1">
@@ -46,10 +46,21 @@
       </div>
     </div>
   </div>
+  <div class="panel-footer">
+    <div class="row">
+      <div class="col-lg-12 col-sm-12">
+        <div class="form-group pull-right">
+          <%= link_to "Write a review", new_movie_review_path(@movie), class: "btn btn-default" %>
+          <% if @movie.user == current_user %>
+            <%= link_to 'Edit', edit_movie_path(@movie), class: "btn btn-default" %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-<%= link_to 'Edit', edit_movie_path(@movie) %> |
-<%= link_to 'Back', root_path %>
+
 
 <script type="text/javascript">
   $('.star-rating').raty({
