--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -11,17 +11,19 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
+    <label for="">Rating</label>
     <div id="star-rating">
 
     </div>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :comment %><br>
-    <%= f.text_area :comment %>
+    <%= f.text_area :comment, class: "form-control", rows: 8 %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions pull-right">
+    <%= link_to 'Cancel', movie_path(@movie), class: "btn btn-default" %>
+    <%= f.submit "Comment", class: "btn btn-default" %>
   </div>
 <% end %>
 
