--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Review</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', movie_path(@movie) %>
+<div class="row">
+  <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3">
+    <div class="panel panel-inverse">
+      <div class="panel-heading">
+        <h1>New Review</h1>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+      </div>
+    </div>
+  </div>
+</div>
